--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div align="center"><img border="0" src="djdd-logo1.gif" alt="logo: DJ Dancin' Dave"></div>
 <p align="center">Hi. I'm Dave Tompkins... formally known as DJ Dancin' Dave.</p>
 <p align="center">I now have a <a href="http://www.cs.uwaterloo.ca/~dtompkin/">"real job"</a>, and I am no longer in the Vancouver area.</p>
-<p align="center">I had a blast making sure other people had a great time. </p>
+<p align="center">It was my pleasure getting so many people out on the dance floor. </p>
 <p align="center">Thanks for the memories.</p>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
